--- a/plugin.xml
+++ b/plugin.xml
@@ -21,11 +21,11 @@
     <framework src="com.queue-it.androidsdk:library:2.0.34"/>
     <source-file src="src/android/QueueIt.java" target-dir="src/com/queueit" />
 
-    <edit-config file="AndroidManifest.xml"
-                 target="/manifest/application"
-                 mode="merge">
-        <application android:allowBackup="false"/>
-    </edit-config>
+    <!--
+        <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
+          <application android:allowBackup="false"/>
+        </edit-config>
+    -->
   </platform>
 
   <!-- ios -->
